# geometry-studio-prototype

./: .gitignore  .gitmodules  CMakeLists.txt  application.qrc  fileddl.h  gmlibscenequickfbo.cpp  gmlibscenequickfbo.h  gmlibscenequickfborenderer.cpp  gmlibscenequickfborenderer.h  guiapplication.cpp  guiapplication.h  inlinefborendertarget.cpp  inlinefborendertarget.h  main.cpp  scenario.cpp  scenario.h  testtorus.cpp  testtorus.h  window.cpp  window.h
gmlibsceneloader/: colorstructure.cpp  colorstructure.h  enabledefaultvisualizerstructure.cpp  enabledefaultvisualizerstructure.h  gmlibsceneloaderdatadescription.cpp  gmlibsceneloaderdatadescription.h  gmlibversionstructure.cpp  gmlibversionstructure.h  materialstructure.cpp  materialstructure.h  pbeziersurfdatastructure.cpp  pbeziersurfdatastructure.h  pbeziersurfstructure.cpp  pbeziersurfstructure.h  pcylinderdatastructure.cpp  pcylinderdatastructure.h  pcylinderstructure.cpp  pcylinderstructure.h  pplanedatastructure.cpp  pplanedatastructure.h  pplanestructure.cpp  pplanestructure.h  propertystructure.cpp  propertystructure.h  pspheredatastructure.cpp  pspheredatastructure.h  pspherestructure.cpp  pspherestructure.h  psurfdatastructure.cpp  psurfdatastructure.h  psurfstructure.cpp  psurfstructure.h  ptorusdatastructure.cpp  ptorusdatastructure.h  ptorusstructure.cpp  ptorusstructure.h  replotstructure.cpp  replotstructure.h  sceneobjectdatastructure.cpp  sceneobjectdatastructure.h  (+16 more)
openddl/: .gitignore  CMakeLists.txt  oddlarray.h  oddlmap.cpp  oddlmap.h  oddlstring.cpp  oddlstring.h  oddltree.cpp  oddltree.h  oddltypes.h  openddl.cpp  openddl.h  test1.cpp
qml/: main.qml
qml/components/: FpsBox.qml
